[java] upgrade to java 17 (#1293)
* [java] upgrade github actions to java 17

* [java] upgrade DockerFile to java 17

* [java] update README to java 17

* [java] migrate codebase to java 17