@@ -45,13 +45,13 @@
   </modules>
 
   <properties>
-    <jdk.version>11</jdk.version>
+    <jdk.version>17</jdk.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!--  Dependency Versions -->
     <!--  Please maintain a sorted list -->
     <!--  Intellij: Search actions (Press shift twice), type "sort lines", then enter :-) -->
-    <aspectj.version>1.9.6</aspectj.version>
+    <aspectj.version>1.9.21</aspectj.version>
     <assertj.version>3.17.2</assertj.version>
     <auto-service.version>1.0.1</auto-service.version>
     <calcite.version>1.36.0</calcite.version>
@@ -267,12 +267,8 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M1</version>
           <configuration>
-            <!-- See https://winterbe.com/posts/2018/08/29/migrate-maven-projects-to-java-11-jigsaw/ -->
             <argLine>
-              --illegal-access=permit
-            </argLine>
-            <argLine>
-              -javaagent:"${settings.localRepository}"/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
+              -javaagent:"${settings.localRepository}"/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
             </argLine>
             <threadCount>1</threadCount>
             <systemPropertyVariables>
